Working on timer and start function

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 <body>
     <section>
         <h1 class="title">Geography Trivia</h1>
-        <h2 class="description">Answer ten geography questions, see how many you can get right! You'll have ten seconds to answer each question</h2>
+        <h2 class="description">Answer ten geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
 <div class="question-number">Question #/10</div>
     <div class="question">What's the capital of xxxx</div>
-<div class="timer">Timer in seconds</div>
+<div class="timer">10 sec timer</div>
 <div class="question-buttons"></div>
     <button class="answer-box" id="answer1">Answer 1</button>
     <button class="answer-box" id="answer2">Answer 2</button>
     <button class="answer-box" id="answer3"> Answer 3</button>
     <button class="answer-box" id="answer4"> Answer 4</button>
-
+<div class="score-container"></div>
+    <div class="score">Score kept here</div>
     </section>
 
     <script src="script.js"></script>
