--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Geography Trivia</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
+        <!-- <div id="earth"></div> -->
         <h1 class="title">Geography Trivia</h1>
+        <!-- <div id="earth"></div> -->
         <h2 class="description">Answer ten geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
-<div class="question-number">Question #/10</div>
-    <div class="question">What's the capital of xxxx</div>
-<div class="timer">10 sec timer</div>
+<div class="question-number"></div>
+    <div class="question"></div>
+<div class="timer"></div>
 <div class="question-buttons"></div>
     <button class="answer-box" id="answer1">Answer 1</button>
     <button class="answer-box" id="answer2">Answer 2</button>
