--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <!-- <div id="earth"></div> -->
         <h1 class="title">Geography Trivia</h1>
         <!-- <div id="earth"></div> -->
-        <h2 class="description">Answer ten geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
+        <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
 <div class="question-number"></div>
-    <div class="question"></div>
+    <p class="question"></p>
 <div class="timer"></div>
 <div class="question-buttons"></div>
     <button class="answer-box" id="answer1">Answer 1</button>
@@ -32,3 +32,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<div>Some Texrt here</div>
