--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     <section>
-        <!-- <div id="earth"></div> -->
-        <h1 class="title">Geography Trivia</h1>
-        <!-- <div id="earth"></div> -->
+        <div id="earth"></div>
+        <h1 class="title"></h1>
+            <span class="title-word title-word-1">Geography</span>
+            <span class="title-word title-word-2"> Trivia</span>
         <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
