--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
         <h1 class="title"></h1>
             <span class="title-word title-word-1">Geography</span>
             <span class="title-word title-word-2"> Trivia</span>
-        <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have ten seconds to answer each question.</h2>
+        <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have 15 seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
-<div class="question-number"></div>
+<div class="question-number" id="questionnumber"></div>
     <p class="question"></p>
 <div class="timer"></div>
 <div class="question-buttons"></div>
-    <button class="answer-box" id="answer1">Answer 1</button>
-    <button class="answer-box" id="answer2">Answer 2</button>
-    <button class="answer-box" id="answer3"> Answer 3</button>
-    <button class="answer-box" id="answer4"> Answer 4</button>
+    <button class="answer-box" id="answer1" onclick="checkanswer(this)">Answer 1</button>
+    <button class="answer-box" id="answer2" onclick="checkanswer(this)">Answer 2</button>
+    <button class="answer-box" id="answer3" onclick="checkanswer(this)"> Answer 3</button>
+    <button class="answer-box" id="answer4" onclick="checkanswer(this)"> Answer 4</button>
 <div class="score-container"></div>
-    <div class="score">Score kept here</div>
+    <div class="score" id="scorediv">Score kept here</div>
     </section>
 
     <script src="script.js"></script>
 </body>
 </html>
-
-<div>Some Texrt here</div>
