--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have 15 seconds to answer each question.</h2>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
-<div class="question-number" id="questionnumber"></div>
+<div class="question-number" id="questionnumber">Question #</div>
     <p class="question"></p>
 <div class="timer"></div>
 <div class="question-buttons"></div>
@@ -27,7 +27,7 @@
     <button class="answer-box" id="answer3" onclick="checkanswer(this)"> Answer 3</button>
     <button class="answer-box" id="answer4" onclick="checkanswer(this)"> Answer 4</button>
 <div class="score-container"></div>
-    <div class="score" id="scorediv">Score kept here</div>
+    <div class="score" id="scorediv">Your score</div>
     </section>
 
     <script src="script.js"></script>
