--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <h1 class="title"></h1>
             <span class="title-word title-word-1">Geography</span>
             <span class="title-word title-word-2"> Trivia</span>
-        <h2 class="description">Answer twenty geography questions, see how many you can get right! You'll have 15 seconds to answer each question.</h2>
+        <h2 class="description">Answer twenty geography questions, see how many you can get right!</h2>
+        <h3 class="time-instruct">You'll have 15 seconds to answer each question.</h3>
     <div class="start"></div>
         <button id="start-button">Start Game</button>
 <div class="question-number" id="questionnumber">Question #</div>
     <p class="question"></p>
-<div class="timer"></div>
+<div class="timer">Time left</div>
 <div class="question-buttons"></div>
     <button class="answer-box" id="answer1" onclick="checkanswer(this)">Answer 1</button>
     <button class="answer-box" id="answer2" onclick="checkanswer(this)">Answer 2</button>
