--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Geography Trivia</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Rubik+Wet+Paint&display=swap" rel="stylesheet"> -->
+    <link href='https://fonts.googleapis.com/css?family=Antic Didone' rel='stylesheet'>
+<style>
+    body {
+    font-family: 'Antic Didone';font-size: 22px;
+}
+</style>
+</style>
 </head>
 <body>
     <section>
