--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <p class="question"></p>
 <div class="timer">Time left</div>
 <div class="question-buttons"></div>
-    <button class="answer-box" id="answer1" onclick="checkanswer(this)">Answer 1</button>
-    <button class="answer-box" id="answer2" onclick="checkanswer(this)">Answer 2</button>
-    <button class="answer-box" id="answer3" onclick="checkanswer(this)"> Answer 3</button>
-    <button class="answer-box" id="answer4" onclick="checkanswer(this)"> Answer 4</button>
+    <button class="answer-box" id="answer1" onclick="checkAnswer(this)">Answer 1</button>
+    <button class="answer-box" id="answer2" onclick="checkAnswer(this)">Answer 2</button>
+    <button class="answer-box" id="answer3" onclick="checkAnswer(this)"> Answer 3</button>
+    <button class="answer-box" id="answer4" onclick="checkAnswer(this)"> Answer 4</button>
 <div class="score-container"></div>
     <div class="score" id="scorediv">Your score</div>
     </section>
