--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
          <p class="question"></p>
          <div class="timer">Time left</div>
          <div class="question-buttons"></div>
-         <button class="answer-box" id="answer1" onclick="checkAnswer(this)">Answer 1</button>
+        <button id=answer1 onclick="checkAnswer(0)"></button>
+        <button id=answer2 onclick="checkAnswer(1)"></button>
+        <button id=answer3 onclick="checkAnswer(2)"></button>
+        <button id=answer4 onclick="checkAnswer(3)"></button>
+
+
+
+
+         <!-- <button class="answer-box" id="answer1" onclick="checkAnswer(this)">Answer 1</button>
          <button class="answer-box" id="answer2" onclick="checkAnswer(this)">Answer 2</button>
          <button class="answer-box" id="answer3" onclick="checkAnswer(this)"> Answer 3</button>
-         <button class="answer-box" id="answer4" onclick="checkAnswer(this)"> Answer 4</button>
+         <button class="answer-box" id="answer4" onclick="checkAnswer(this)"> Answer 4</button> -->
          <div class="score-container"></div>
          <div class="score" id="scorediv">Your score</div>
       </section>
